<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="sdm.g15_100330606_100330630.usermanager.fragments.InsertUsersFragment" >


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin" >

        <TextView
            android:id="@+id/hint_insert_users_nationality_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/HintsTheme"
            android:text="@string/hint_insert_users_nationality"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <Spinner
            android:id="@+id/insert_users_nationality_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SpinnersTheme"
            android:spinnerMode="dialog"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin_xs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hint_insert_users_nationality_value"  />

        <TextView
            android:id="@+id/hint_insert_users_gender_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/HintsTheme"
            android:text="@string/hint_insert_users_gender"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/insert_users_nationality_value" />

        <Spinner
            android:id="@+id/insert_users_gender_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SpinnersTheme"
            android:spinnerMode="dialog"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin_xs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hint_insert_users_gender_value" />

        <TextView
            android:id="@+id/hint_insert_users_number_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/HintsTheme"
            android:text="@string/hint_insert_users_number"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/insert_users_gender_value" />

        <TextView
            android:id="@+id/insert_users_number_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ValuesTheme"
            android:text="@string/default_insert_users_number"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin_xs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hint_insert_users_number_value" />

        <TextView
            android:id="@+id/hint_insert_users_register_date_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/HintsTheme"
            android:text="@string/hint_insert_users_start_date"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/insert_users_number_value" />

        <TextView
            android:id="@+id/insert_users_register_date_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ValuesTheme"
            android:text="@string/default_insert_users_start_date"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin_xs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hint_insert_users_register_date_value" />

        <Button
            android:id="@+id/actionSubmitInsertUsers"
            style="@style/ButtonsTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/insert_users_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/insert_users_register_date_value" />

        <!--

        <TextView
            android:id="@+id/insert_users_nationality_text"
            style="@style/TextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="8dp"
            android:text="@string/insert_users_nationality"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/insert_users_nationality_value" />

        <TextView
            android:id="@+id/insert_users_gender_text"
            style="@style/TextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="8dp"
            android:text="@string/insert_users_gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/insert_users_gender_value" />

        <TextView
            android:id="@+id/insert_users_number_text"
            style="@style/TextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin_sm"
            android:text="@string/insert_users_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/insert_users_number_value" />

        <TextView
            android:id="@+id/insert_users_start_date_text"
            style="@style/TextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin_sm"
            android:text="@string/insert_users_start_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/insert_users_register_date_value" />



        <TextView
            android:id="@+id/insert_users_nationality_value"
            style="@style/ValuesTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:ems="10"
            android:textAlignment="center"
            android:background="?attr/editTextBackground"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/hint_insert_users_nationality"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/insert_users_gender_value"
            style="@style/ValuesTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            android:background="?attr/editTextBackground"
            android:backgroundTint="@color/colorAccent"
            android:paddingRight="0dp"
            android:paddingLeft="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/insert_users_nationality_value" />

        <TextView
            android:id="@+id/insert_users_number_value"
            style="@style/ValuesTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:ems="10"
            android:textAlignment="center"
            android:background="?attr/editTextBackground"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/hint_insert_users_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/insert_users_gender_value" />

        <TextView
            android:id="@+id/insert_users_register_date_value"
            style="@style/ValuesTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:ems="10"
            android:textAlignment="center"
            android:background="?attr/editTextBackground"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/hint_insert_users_start_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/insert_users_number_value" />
    -->
    </android.support.constraint.ConstraintLayout>
</ScrollView>